Fix npc sheet stretching.

--- a/styles/dcc.scss
+++ b/styles/dcc.scss
@@ -1364,6 +1364,7 @@ form.dcc-roll-modifier {
 .dcc {
   .npc-grid {
     height: 100%;
+    grid-template-rows: 18px 81px minmax(80px, auto) minmax(40px, min-content) minmax(40px, min-content);
 
     textarea {
       background: none;
